<resources>
    <string name="app_name">STUDY TIME (A Flashcard App)</string>
    <string name="book_name">Place Holder (Book Name)</string>
    <string name="delete_book">Delete Book</string>
    <string name="edit_book_name">Edit Book Name</string>
    <string name="home">Back to Home</string>
    <string name="new_card">New Flashcard</string>
    <string name="headerAddBook">Add Book</string>
    <string name="hint_book_name">Book Name (Required)</string>
    <string name="hint_question">Question</string>
    <string name="hint_answer">Answer</string>
    <string name="button_clear">Clear</string>
    <string name="button_save">Save</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="headerAddCard">Add Card</string>
    <string name="new_book">Add New Book</string>
    <string name="close">Close</string>
    <string name="headerEditText">Edit Text</string>
    <string name="button_close">Close</string>
    <string name="button_cancel">Cancel</string>
    <string name="headerEditBook">Edit Book Name</string>
    <string name="card_answer">Answer</string>
    <string name="card_question">Question</string>
    <string name="edit_card">Edit Flashcard</string>
    <string name="delete_card">Delete Flashcard</string>


</resources>